Clean up files and fix paths for GH Page

--- a/publications.html
+++ b/publications.html
@@ -5,7 +5,7 @@
    <html>
    		<head> 
    			<title>Raj Lab</title>
-   			<link rel="stylesheet" type="text/css" href="css/main.css" />
+   			<link rel="stylesheet" type="text/css" href="/css/main.css" />
             <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -16,15 +16,15 @@
          <header> 
             <nav>
                <ul>
-                  <li><a href="index.html"><strong>ABOUT</strong></a></li>
-                  <li><a href="projects.html"><strong>PROJECTS</strong></a></li>
-                  <li><a href="people.html"><strong>PEOPLE</strong></a></li>
-                  <li><a href="publications.html"><strong>PUBLICATIONS</strong></a></li>
-                  <li><a href="joinus.html"><strong>JOIN US</strong></a></li>
-                  <li><a href="contact.html"><strong>CONTACT</strong></a></li>
+                  <li><a href="/index.html"><strong>ABOUT</strong></a></li>
+                  <li><a href="/projects.html"><strong>PROJECTS</strong></a></li>
+                  <li><a href="/people.html"><strong>PEOPLE</strong></a></li>
+                  <li><a href="/publications.html"><strong>PUBLICATIONS</strong></a></li>
+                  <li><a href="/joinus.html"><strong>JOIN US</strong></a></li>
+                  <li><a href="/contact.html"><strong>CONTACT</strong></a></li>
                </ul>
                </nav>
-            <img src="images/labphoto.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
+            <img src="/images/labphoto.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
    			 <div1><STRONG>RAJ LAB</STRONG></div1><br><div2><em>Departments of Neuroscience, Genetics & Genomics<br>Ichan School of Medicine at Mount Sinai</em></div2>
    			 </header>
 
@@ -42,15 +42,15 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner">
       <div class="item active">
-        <img src="images/BRAIN.png" alt="Los Angeles" style="width:100%;">
+        <img src="/images/BRAIN.png" alt="Los Angeles" style="width:100%;">
       </div>
 
       <div class="item">
-        <img src="images/evan_computer.jpg" alt="Chicago" style="width:100%;">
+        <img src="/images/evan_computer.jpg" alt="Chicago" style="width:100%;">
       </div>
     
       <div class="item">
-        <img src="images/manual_sorter.jpg" alt="New york" style="width:100%;">
+        <img src="/images/manual_sorter.jpg" alt="New york" style="width:100%;">
       </div>
     </div>
 
