--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
    <html>
    		<head> 
    			<title>Raj Lab</title>
-   			<link rel="stylesheet" type="text/css" href="css/main.css" />
+   			<link rel="stylesheet" type="text/css" href="/css/main.css" />
    		</head>
    		
    		<body>
@@ -13,27 +13,27 @@
          <header> 
             <nav>
                <ul>
-                  <li><a href="index.html"><strong>ABOUT</strong></a></li>
-                  <li><a href="projects.html"><strong>PROJECTS</strong></a></li>
-                   <li><a href="page5.html"><strong>other</strong></a></li>
-                  <li><a href="people.html"><strong>PEOPLE</strong></a></li>
-                  <li><a href="publications.html"><strong>PUBLICATIONS</strong></a></li>
-                  <li><a href="joinus.html"><strong>JOIN US</strong></a></li>
-                  <li><a href="contact.html"><strong>CONTACT</strong></a></li>
+                  <li><a href="/index.html"><strong>ABOUT</strong></a></li>
+                  <li><a href="/projects.html"><strong>PROJECTS</strong></a></li>
+                   <li><a href="/page5.html"><strong>other</strong></a></li>
+                  <li><a href="/people.html"><strong>PEOPLE</strong></a></li>
+                  <li><a href="/publications.html"><strong>PUBLICATIONS</strong></a></li>
+                  <li><a href="/joinus.html"><strong>JOIN US</strong></a></li>
+                  <li><a href="/contact.html"><strong>CONTACT</strong></a></li>
                </ul>
                </nav>
-            <img class="headerimage" src="images/labphoto.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
+            <img class="headerimage" src="/images/labphoto.jpg" alt="boat" style="width:100%;min-height:350px;max-height:600px;">
    			 <div1><STRONG>RAJ LAB</STRONG></div1><br><div2><em>Departments of Neuroscience, Genetics & Genomics<br>Ichan School of Medicine at Mount Sinai</em></div2>
    			 </header>
 
    			 <p class="secondary"> Welcome to the Raj Lab! </p><br>
 
     <div class="snap"> 
-            <div><img src="images/BRAIN.png"></div>
-            <div><img src="images/lab_girls.jpg"></div>
-            <div><img src="images/evan_computer.jpg"></div>
-            <div><img src="images/manual_sorter.jpg"></div>
-            <div><img src="images/office_window.jpg"></div>
+            <div><img src="/images/BRAIN.png"></div>
+            <div><img src="/images/lab_girls.jpg"></div>
+            <div><img src="/images/evan_computer.jpg"></div>
+            <div><img src="/images/manual_sorter.jpg"></div>
+            <div><img src="/images/office_window.jpg"></div>
             </div>
         
                <div class="col1"> <div5><strong><em>From Blood to Brain</em></strong></div5><br>
