--- a/projects.html
+++ b/projects.html
@@ -10,30 +10,32 @@
 
 	<!-- Bootstrap-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-	 crossorigin="anonymous">
-
+	 crossorigin="anonymous"> 
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
 	 crossorigin="anonymous"></script>
 	<!--CSS-->
 	<link rel="stylesheet" href="./assets/css/main.css" />
-</head>
+	<!-- Favicon -->
+	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 
-<body>
 	<!-- Scripts -->
 	<script src="./assets/js/jquery.min.js"></script>
 	<script src="./assets/js/skel.min.js"></script>
 	<script src="./assets/js/util.js"></script>
-	<script src="./assets/js/main.js"></script>
+	<script src="./assets/js/main.js"></script> 
+</head>
+
+<body>
+	
 
 
 
 	<!-- Header -->
 	<header id="header">
-		<div class="inner">
-			<img src="./icons/brain-icon.png" class="lab-logo">
-			<a href="./index.html" class="logo">Raj Lab <br></a>
-
+		<div class="inner"> 
 			<nav id="nav">
+				<img src="./icons/brain-icon.png" class="img-logo">
+				<a href="./index.html" class="logo">Raj Lab <br></a>
 				<a href="./people.html">Team</a>
 				<a href="./projects.html">Projects</a>
 				<a href="./publications.html">Publications</a>
@@ -61,7 +63,7 @@
 					<h2>Neuroimmunology</h2>
 					<div class="row projectContent">
 						<div class="col-md-3 project">
-							<h3>MyND</h3><br>
+							<h3>MyND</h3><br><br>
 							<img src="./icons/DNA.png">
 							<p>The role of <strong>My</strong>eloid cells in <strong>N</strong>euro<strong>d</strong>egeneration</p>
 						</div>
@@ -76,7 +78,7 @@
 							<p>The Role of LRRK2 and GBA in manifesting and non-manifesting Parkinson’s disease </p>
 						</div>
 						<div class="col-md-3 project">
-							<h3>Microglia</h3><br>
+							<h3>Microglia</h3><br><br>
 							<img src="./icons/chemicals.png">
 							<p>Characterization of human microglia in health and disease</p>
 						</div>
@@ -88,17 +90,17 @@
 					<h2>Functional Genomics and Gene Regulation</h2>
 					<div class="row projectContent">
 						<div class="col-md-3 project">
-							<h3>Variant Effects</h3><br>
+							<h3>Variant Effects</h3><br><br>
 							<img src="./icons/DNA.png">
 							<p>Characterizing genetic variants that affect the cellular phenotypes</p>
 						</div>
 						<div class="col-md-3 project">
-							<h3>Alternate Splicing</h3><br>
+							<h3>Alternate Splicing</h3><br><br>
 							<img src="./icons/chemicals.png">
 							<p>Regulation of Alternative pre-mRNA Splicing</p>
 						</div>
 						<div class="col-md-3 project">
-							<h3>Structural Variants</h3>
+							<h3>Structural Variants</h3><br><br>
 							<img src="./icons/DNA.png">
 							<p>Patterns and mechanisms of structural variations in brain diseases</p>
 						</div>
@@ -115,7 +117,7 @@
 					<h2>Technology</h2>
 					<div class="row projectContent">
 						<div class="col-md-3 project">
-							<h3>Big Data Integration</h3>
+							<h3>Big Data Integration</h3><br><br>
 							<img src="./icons/DNA.png">
 							<p>Methods for Big Data Integration</p>
 						</div>
