--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,4 @@
 <!DOCTYPE HTML>
-<!-- 
--->
 <html>
 
 <head>
@@ -8,31 +6,40 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
+	<!-- Local Scripts -->
+	<script src="./assets/js/jquery.min.js"></script>
+	<script src="./assets/js/skel.min.js"></script>
+	<script src="./assets/js/util.js"></script>
+	<script src="./assets/js/main.js"></script>
+
 	<!-- Bootstrap-->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-	 crossorigin="anonymous"> 
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-	 crossorigin="anonymous"></script>
+	<script src="./assets/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+	<!-- jquery -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+
 	<!--CSS-->
 	<link rel="stylesheet" href="./assets/css/main.css" />
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+	<!-- D3 -->
+	<script src="https://d3js.org/d3.v5.min.js"></script>
 
-	<!-- Scripts -->
-	<script src="./assets/js/jquery.min.js"></script>
-	<script src="./assets/js/skel.min.js"></script>
-	<script src="./assets/js/util.js"></script>
-	<script src="./assets/js/main.js"></script> 
+	<!-- React -->
+	<!-- <script src="https://unpkg.com/react@16/umd/react.production.js" crossorigin></script>
+					<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.js" crossorigin></script>
+					<script src="./assets/jsx/react.jsx"></script>  -->
 </head>
 
 <body>
-	
+
 
 
 
 	<!-- Header -->
 	<header id="header">
-		<div class="inner"> 
+		<div class="inner">
 			<nav id="nav">
 				<img src="./icons/brain-icon.png" class="img-logo">
 				<a href="./index.html" class="logo">Raj Lab <br></a>
@@ -51,9 +58,11 @@
 	<section id="main">
 		<div class="inner">
 			<header class="major special">
+
 				<h1>Projects</h1>
 				<p>Our lab is currently working on a variety of projects related to:<br>
-					<a href="#Neuroimmunology">Neuroimmunology</a>, <a href="#FunctionalGenomics">Functional Genomics and Gene Regulation</a>,
+					<a href="#Neuroimmunology">Neuroimmunology</a>, <a href="#FunctionalGenomics">Functional Genomics and Gene
+						Regulation</a>,
 					and <a href="#Technology">Technology</a></p>
 			</header>
 
@@ -130,13 +139,14 @@
 	</section>
 
 	<!-- Footer -->
-	<section id="footer"> 
+	<section id="footer">
 		<h3>Contact Us</h3>
 		<div class="row">
-		<div class="col-md-3">
-				<iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3020.789686381047!2d-73.95461098459268!3d40.78863757932357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258a73c43f3a3%3A0xaf52777f7f7b2ae!2s1425+Madison+Ave%2C+New+York%2C+NY+10029!5e0!3m2!1sen!2sus!4v1543959381826" frameborder="0" allowfullscreen></iframe>
-		</div>
-		<div class="col-md-3"> 
+			<div class="col-md-3">
+				<iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3020.789686381047!2d-73.95461098459268!3d40.78863757932357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258a73c43f3a3%3A0xaf52777f7f7b2ae!2s1425+Madison+Ave%2C+New+York%2C+NY+10029!5e0!3m2!1sen!2sus!4v1543959381826"
+				 frameborder="0" allowfullscreen></iframe>
+			</div>
+			<div class="col-md-3">
 				<h4>Principal Investigator</h4>
 				<p><strong>Towfique Raj, PhD</strong><br>
 					Assistant Professor <br>
@@ -145,39 +155,37 @@
 					1425 Madison Avenue, Icahn 10-70E<br>
 					New York, NY 10029<br>
 					Tel: 212-659-5648<br>
-					E-mail: <a href="mailto:towfique.raj@mssm.edu">towfique.raj@mssm.edu</a>
-				</p> 
-		</div>
+					E-mail: <span><a>towfique.raj [at] mssm.edu</a></span>
+				</p>
+			</div>
 
-		<div class="col-md-3"> 
-			<h4>Computational Lab 1</h4>
-			<p>1425 Madison Avenue, Icahn 10-52<br>
-			New York, NY 10029<br> 
-			</p>
-		 
-			<h4>Computational Lab 2</h4>
-			<p>19 E 98th Street, Room 6C <br> 
-			New York, NY 10029<br> 
-			</p>
-			<a href="https://github.com/RajLabMSSM" target="_blank">
-				<img src="./icons/github.png" id="github-logo">
-			</a>
-		</div>
-		<div class="col-md-3">  
-			<h4>Wet Lab</h4>
-			<p>Icahn Building, Room 10-52<br>
-			1425 Madison Avenue<br>
-			New York, NY 10029<br><br> 
-			</p> 
-			<div id="sinai-logo">
-				<a href="https://icahn.mssm.edu/" target="_blank">
-					<img src="./icons/Icahn.png">
+			<div class="col-md-3">
+				<h4>Computational Lab 1</h4>
+				<p>1425 Madison Avenue, Icahn 10-52<br>
+					New York, NY 10029<br>
+				</p>
+
+				<h4>Computational Lab 2</h4>
+				<p>19 E 98th Street, Room 6C <br>
+					New York, NY 10029<br>
+				</p>
+				<a href="https://github.com/RajLabMSSM" target="_blank">
+					<img src="./icons/github.png" id="github-logo">
 				</a>
 			</div>
-		
-	</div>
+			<div class="col-md-3">
+				<h4>Wet Lab</h4>
+				<p>Icahn Building, Room 10-52<br>
+					1425 Madison Avenue<br>
+					New York, NY 10029<br><br>
+				</p>
+				<div id="sinai-logo">
+					<a href="https://icahn.mssm.edu/" target="_blank">
+						<img src="./icons/Icahn.png">
+					</a>
+				</div>
 
-
+			</div>
 	</section>
 
 
