--- a/publications.html
+++ b/publications.html
@@ -1,91 +1,209 @@
 <!DOCTYPE HTML>
-<!--
-	Introspect by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
-	<head>
-		<title>Elements - Introspect by TEMPLATED</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-	</head>
-	<body>
 
-		<!-- Header -->
+<head>
+	<title>Raj Lab @ MSSM</title>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
-        <head>
-                <title>Raj Lab</title>
-                <meta charset="utf-8" />
-                <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-                <link rel="stylesheet" href="assets/css/main.css" />
-        </head>
-        <body>
+	<!-- D3 -->
+	<script src="https://d3js.org/d3.v5.min.js"></script>
+	<!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
+	<!-- Local Scripts -->
+	<script src="./assets/js/jquery.min.js"></script>
+	<script src="./assets/js/skel.min.js"></script>
+	<script src="./assets/js/util.js"></script>
+	<script src="./assets/js/main.js"></script>
+	<script src="./assets/js/makeTable.js"></script>
 
+
+	<!-- Bootstrap-->
+	<script src="./assets/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+
+	<!-- Datatables -->
+	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
+	<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
+	<script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+	<script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap.min.js"></script>
+	<script src="https://cdn.datatables.net/select/1.2.7/js/dataTables.select.min.js"></script>
+	<script src="https://cdn.datatables.net/buttons/1.5.2/js/dataTables.buttons.min.js"></script>
+	<script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.flash.min.js"></script>
+	<script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.html5.min.js"></script>
+	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
+	<script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.print.min.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script> -->
+	<!--CSS-->
+	<link rel="stylesheet" href="./assets/css/main.css" />
+	<!-- Favicon -->
+	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+
+
+
+	<!-- React -->
+	<!-- <script src="https://unpkg.com/react@16/umd/react.production.js" crossorigin></script>
+								<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.js" crossorigin></script>
+								<script src="./assets/jsx/react.jsx"></script>  -->
+</head>
+
+<body>
 	<!-- Header -->
-			<header id="header">
-				<div class="inner">
-					<a href="index.html" class="logo">Raj Lab <br></a>
+	<header id="header">
+		<div class="inner">
+			<nav id="nav">
+				<img src="./icons/brain-icon.png" class="img-logo">
+				<a href="./index.html" class="logo">Raj Lab <br></a>
+				<a href="./people.html">Team</a>
+				<a href="./projects.html">Projects</a>
+				<a href="./publications.html">Publications</a>
+				<a href="./data.html">Data/Software</a>
+				<a href="./funding.html">Funding</a>
+				<a href="./joinus.html">Join Us</a>
+			</nav>
+		</div>
+	</header>
+	<!-- Main -->
+	<section id="main">
+		<div class="inner">
+			<header class="major special">
 
-					<nav id="nav">
-						<a href="index.html">Home</a>
-						<a href="people.html">Team</a>
-						<a href="projects.html">Projects</a>
-            <a href="publications.html">Publications</a>
-            <a href="data.html">Data/Software</a>
-            <a href="funding.html">Funding</a>
-            <a href="joinus.html">Join Us</a>
-					</nav>
-				</div>
+				<h1>Publications</h1>
+				<p>Dynamically search all of our publications</p>
 			</header>
-		<!-- Main -->
-			<section id="main">
-				<div class="inner">
-					<header class="major special">
-						<h1>Publications</h1>
-						<p></p>
-					</header>
+		</div>
 
-												<style>
-p.small {
-    line-height: 1.3;
-</style>
+		<!-- Publications -->
+		<!-- Automatically generate publications from file -->
+		<script>
+			console.log("start JS")
 
-					<!-- Image -->
-	
+			d3.csv("./documents/publications_rajlab.csv")
+				.then(function (data) {
+					// console.log(typeof (data[1]))
+					// console.log(data[1])
 
-							<h3>2018</h3>
-							<p class="small" align="left" style="color: #264d73;"><span class="image left"><img src="images/cell2018.jpg" alt="" /></span>
-							<a href="https://www.cell.com/cell/fulltext/S0092-8674(15)01696-7?code=cell-site&rss=yes"<b> Parsing the interferon transcriptional network and its disease associations</b></a><br><br>
-							<font size="3">Sara Mostafavi, Hideyuki Yoshida, Devapregasan Moodley, Hugo LeBoité, Katherine Rothamel, <u>Towfique Raj</u>, Chun Jimmie Ye, Nicolas Chevrier, Shen-Ying Zhang, Ting Feng, Mark Lee, Jean-Laurent Casanova, James D Clark, Martin Hegen, Jean-Baptiste Telliez, Nir Hacohen, Philip L De Jager, Aviv Regev, Diane Mathis, Christophe Benoist, Immunological Genome Project Consortium</font><br><br>
-													<font size="3" color="darkblue"> Cell   January 28, 2016 </font><br>
-						<a href="https://www.ncbi.nlm.nih.gov/pubmed/26824662" <b> <font size="3" color="grey">PMC: 26824662</font> </b></a><br><br>
-						<br><br><br>
-							</p>
-														<p class="small" align="left" style="color: #264d73;"><span class="image left"><img src="images/cell2018.jpg" alt="" /></span>
-							<a href="https://www.nature.com/articles/s41588-018-0238-1"<b>Integrative transcriptome analyses of the aging brain implicate altered splicing in Alzheimer’s disease susceptibility</b></a><br><br>
-							<font size="3"><u>Towfique Raj</u>, Yang I Li, Garrett Wong, Jack Humphrey, Minghui Wang, Satesh Ramdhani, Ying-Chih Wang, Bernard Ng, Ishaan Gupta, Vahram Haroutunian, Eric E Schadt, Tracy Young-Pearse, Sara Mostafavi, Bin Zhang, Pamela Sklar, David A Bennett, Philip L De Jager</font><br><br>
-								<font size="3" color="darkblue"> Nature Genetics October 08, 2018</font><br>
-						<a href="https://www.ncbi.nlm.nih.gov/pubmed/26824662" <b> <font size="3" color="grey">PMC: 26824662</font> </b></a><br><br>
-						<br><br><br>
-						
-						
-								</p>	
-						</section>
+					const obj = Object.values(data)
+						.filter(({ Authors }) => Authors !== "")
 
+
+					var result = Object.keys(obj).map(function (key) {
+						var entry = obj[key]
+						return Object.values(entry)
+					});
+					result.pop(); // Remove header info as row
+					console.log(result)
+					return result
+				})
+				.then(function (result) {
+					$('#pubsTable thead tr:eq(1) th').each(function () {
+						var title = $('#pubsTable thead tr:eq(0) th').eq($(this).index()).text();
+						$(this).html('<input type="text" placeholder="Search ' + title + '" />');
+					});
+
+					var table = $('#pubsTable').DataTable({
+						data: result,
+						scrollY: "500px",
+						scrollCollapse: true,
+						paging: false,
+						dom: 'frtipB',
+						buttons: ["csv"],
+						columns: [
+							{ "title": "Authors" },
+							{ "title": "Title" },
+							{ "title": "Journal" },
+							{ "title": "Volume" },
+							{ "title": "Number" },
+							{ "title": "Pages" },
+							{ "title": "Year" },
+							{ "title": "Publisher" }
+						],
+						columnDefs: [
+							{targets: 1, className: 'Title' },
+							{targets: 2, className: 'Journal' }],
+						order: [],
+							orderCellsTop: true
+					})
+					//table.draw();
+
+					// Apply the search
+					table.columns().every(function (index) {
+						$('#pubsTable thead tr:eq(1) th:eq(' + index + ') input').on('keyup change', function () {
+							table.column($(this).parent().index() + ':visible')
+								.search(this.value)
+								.draw();
+						});
+					});
+
+				})
+
+
+
+
+		</script>
+		<div class="pubContainer container">
+			<table id="pubsTable" class="cell-border compact stripe hover order-column" cellspacing="0" width="100%"></table>
+		</div>
+
+
+	</section>
+
+
+
+
+
+	<!-- Footer -->
+	<!-- Footer -->
+	<section id="footer">
+		<h3>Contact Us</h3>
+		<div class="row">
+			<div class="col-md-3">
+				<!-- Google Map throws a GET warning -->
+				<iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3020.789686381047!2d-73.95461098459268!3d40.78863757932357!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c258a73c43f3a3%3A0xaf52777f7f7b2ae!2s1425+Madison+Ave%2C+New+York%2C+NY+10029!5e0!3m2!1sen!2sus!4v1543959381826"
+				 frameborder="0" allowfullscreen></iframe>
+			</div>
+			<div class="col-md-3">
+				<h4>Principal Investigator</h4>
+				<p><strong>Towfique Raj, PhD</strong><br>
+					Assistant Professor <br>
+					Departments of Neuroscience, Genetics and Genomic Sciences<br>
+					Icahn School of Medicine at Mount Sinai<br>
+					1425 Madison Avenue, Icahn 10-70E<br>
+					New York, NY 10029<br>
+					Tel: 212-659-5648<br>
+					E-mail: <span><a>towfique.raj [at] mssm.edu</a></span>
+				</p>
+			</div>
+
+			<div class="col-md-3">
+				<h4>Computational Lab 1</h4>
+				<p>1425 Madison Avenue, Icahn 10-52<br>
+					New York, NY 10029<br>
+				</p>
+
+				<h4>Computational Lab 2</h4>
+				<p>19 E 98th Street, Room 6C <br>
+					New York, NY 10029<br>
+				</p>
+				<a href="https://github.com/RajLabMSSM" target="_blank">
+					<img src="./icons/github.png" id="github-logo">
+				</a>
+			</div>
+			<div class="col-md-3">
+				<h4>Wet Lab</h4>
+				<p>Icahn Building, Room 10-52<br>
+					1425 Madison Avenue<br>
+					New York, NY 10029<br><br>
+				</p>
+				<div id="sinai-logo">
+					<a href="https://icahn.mssm.edu/" target="_blank">
+						<img src="./icons/Icahn.png">
+					</a>
 				</div>
-			</section>
 
-		<!-- Footer -->
-			<section id="footer">
-			
+			</div>
+	</section>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+</body>
 
-	</body>
 </html>
