Style changes to Pubs Table

--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,8 @@
 	<!-- D3 -->
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 
+	<!-- Icons -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
 	<!-- React -->
 	<!-- <script src="https://unpkg.com/react@16/umd/react.production.js" crossorigin></script>
 					<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.js" crossorigin></script>
@@ -59,7 +61,9 @@
 		<div class="inner">
 			<header class="major special">
 
-				<h1>Projects</h1>
+				<h1><i class="fa fa-sitemap" aria-hidden="true"></i>
+				</i>
+					Projects</h1>
 				<p>Our lab is currently working on a variety of projects related to:<br>
 					<a href="#Neuroimmunology">Neuroimmunology</a>, <a href="#FunctionalGenomics">Functional Genomics and Gene
 						Regulation</a>,
