--- a/publications.html
+++ b/publications.html
@@ -5,6 +5,8 @@
 	<title>Raj Lab @ MSSM</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<!-- Favicon -->
+	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 
 	<!-- D3 -->
 	<script src="https://d3js.org/d3.v5.min.js"></script>
@@ -20,7 +22,8 @@
 	<!-- Bootstrap-->
 	<script src="./assets/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
-
+	<!-- jquery -->
+	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<!-- Datatables -->
 	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
 	<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
@@ -30,14 +33,21 @@
 	<script src="https://cdn.datatables.net/buttons/1.5.2/js/dataTables.buttons.min.js"></script>
 	<script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.flash.min.js"></script>
 	<script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.html5.min.js"></script>
+
+	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+	<link href="https://cdn.datatables.net/1.10.13/css/dataTables.bootstrap.min.css" rel="stylesheet" type="text/css" />
+	<!-- <script src="https://nightly.datatables.net/js/jquery.dataTables.js"></script> -->
+	<script src="https://cdn.datatables.net/1.10.13/js/dataTables.bootstrap.min.js"></script>
 	<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
 	<script src="https://cdn.datatables.net/buttons/1.5.2/js/buttons.print.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jszip/3.1.3/jszip.min.js"></script> -->
+	<!-- Icons -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+	 crossorigin="anonymous">
+
 	<!--CSS-->
-	<link rel="stylesheet" href="./assets/css/main.css" />
-	<!-- Favicon -->
-	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+	<link href="./assets/css/main.css" rel="stylesheet" type="text/css" />
 
 
 
@@ -66,9 +76,8 @@
 	<!-- Main -->
 	<section id="main">
 		<div class="inner">
-			<header class="major special">
-
-				<h1>Publications</h1>
+			<header>
+				<h1><i class="fas fa-book-open"></i> Publications</h1>
 				<p>Dynamically search all of our publications</p>
 			</header>
 		</div>
@@ -105,24 +114,25 @@
 						data: result,
 						scrollY: "500px",
 						scrollCollapse: true,
+						scroller: true,
 						paging: false,
-						dom: 'frtipB',
-						buttons: ["csv"],
+						dom: 'Bfrtip',
+						buttons: [{ "extend": "csv", "text":"<i class='fas fa-file-csv' style='font-size: 35px;vertical-align: middle; padding-bottom: 7px;'></i>", "className": "csvButton" }],
 						columns: [
-							{ "title": "Authors" },
-							{ "title": "Title" },
-							{ "title": "Journal" },
-							{ "title": "Volume" },
-							{ "title": "Number" },
-							{ "title": "Pages" },
-							{ "title": "Year" },
-							{ "title": "Publisher" }
+							{ "title": "Authors", "className": "pubsHeader" },
+							{ "title": "Title", "className": "pubsHeader" },
+							{ "title": "Journal", "className": "pubsHeader" },
+							{ "title": "Volume", "className": "pubsHeader" },
+							{ "title": "Number", "className": "pubsHeader" },
+							{ "title": "Pages", "className": "pubsHeader" },
+							{ "title": "Year", "className": "pubsHeader" },
+							{ "title": "Publisher", "className": "pubsHeader" }
 						],
 						columnDefs: [
-							{targets: 1, className: 'Title' },
-							{targets: 2, className: 'Journal' }],
+							{ targets: 1, className: 'Title' },
+							{ targets: 2, className: 'Journal' }],
 						order: [],
-							orderCellsTop: true
+						orderCellsTop: true
 					})
 					//table.draw();
 
@@ -137,12 +147,12 @@
 
 				})
 
-
-
+ 
 
 		</script>
-		<div class="pubContainer container">
-			<table id="pubsTable" class="cell-border compact stripe hover order-column" cellspacing="0" width="100%"></table>
+		<div id="pubContainer" class="container">
+			<table id="pubsTable" class="cell-border compact stripe hover order-column" cellspacing="0" cellpadding="0" border="0"
+			 width="100%"></table>
 		</div>
 
 
