CSV download button

--- a/funding.html
+++ b/funding.html
@@ -59,9 +59,14 @@
 			<header>
 				<h1><i class="fa fa-university" aria-hidden="true"></i>
 					</i> Funding</h1>
-				<p>Our research is made possible by the generous funding provided by the following sources
-				<br>Both <a href="#activeGrants">Active</a> and <a href="#completedGrants">Completed</a> grants are provided.
+				<p>Our research is made possible by the generous funding provided by the following sources. 
+					<br>Both <a href="#activeGrants">Active</a> and <a href="#completedGrants">Completed</a> grants are provided.
+					Download all here: <a href="./documents/Raj_Grants.csv" download="Raj_Grants.csv">
+						<i class='fas fa-file-csv' style='font-size: 35px;vertical-align: middle; padding-bottom: 7px;'></i>
+					</a>
 				</p>
+				
+
 			</header>
 
 			<!-- Text -->
