--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Raj Lab @ MSSM</title>
+	<title>Raj Lab - [Projects]</title>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 
