Fix import Google fonts; fix header on all pages; fix footer in css

--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML> 
+<!DOCTYPE HTML>
 <html>
 
 <head>
@@ -27,36 +27,41 @@
 	<script src="https://d3js.org/d3.v5.min.js"></script>
 
 	<!-- Icons -->
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+	 crossorigin="anonymous">
 	<!-- React -->
 	<!-- <script src="https://unpkg.com/react@16/umd/react.production.js" crossorigin></script>
 					<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.js" crossorigin></script>
 					<script src="./assets/jsx/react.jsx"></script>  -->
-</head> 
-<body> 
+</head>
+
+<body>
 	<!-- Header -->
 	<header id="header">
-		<div class="inner">
-			<nav id="nav">
+		<div class="container">
+			<a class="logo" href="./index.html">
 				<img src="./icons/brain-icon.png" class="img-logo">
-				<a href="./index.html" class="logo">Raj Lab <br></a>
-				<a href="./people.html">Team</a>
-				<a href="./projects.html">Projects</a>
-				<a href="./publications.html">Publications</a>
-				<a href="./data.html">Data/Software</a>
-				<a href="./funding.html">Funding</a>
-				<a href="./joinus.html">Join Us</a>
-			</nav>
+				Raj Lab
+			</a>
+			<a href="./people.html" class="nav-link">Team</a>
+			<a href="./projects.html" class="nav-link">Projects</a>
+			<a href="./publications.html" class="nav-link">Publications</a>
+			<a href="./data.html" class="nav-link">Data/Software</a>
+			<a href="./funding.html" class="nav-link">Funding</a>
+			<a href="./joinus.html" class="nav-link">Join Us</a>
 		</div>
 	</header>
- 
+
+
+
+
 	<!-- Main -->
 	<section id="main">
 		<div class="inner">
 			<header class="major special">
 
 				<h1><i class="fa fa-sitemap" aria-hidden="true"></i>
-				</i>
+					</i>
 					Projects</h1>
 				<p>Our lab is currently working on a variety of projects related to:<br>
 					<a href="#Neuroimmunology">Neuroimmunology</a>, <a href="#FunctionalGenomics">Functional Genomics and Gene
