--- a/data.html
+++ b/data.html
@@ -105,7 +105,7 @@
 					<h4 class='dataAuthors'> Authors: 
 						<p>Yang I Li, Garrett Wong, Jack Humphrey, Towfique Raj</p></h4>
 	
-					<a href='https://leafcutter.shinyapps.io/sQTLviz/' target='_blank'>
+					<a href='https://rajlab.shinyapps.io/sQTLviz_CMC/' target='_blank'>
 						<h4>Data: </h4><p>ROS/MAP sQTL browser</p>
 					</a>
 					<a href='https://www.biorxiv.org/content/early/2017/12/08/231001' target='_blank'>
