--- a/index.html
+++ b/index.html
@@ -72,59 +72,39 @@
 		</div>
 	</header>
 
-
-	<!-- Banner -->
-	<div class="container1">
-		<div id="myCarousel" class="carousel slide" data-ride="carousel">
-
-			<!-- Indicators -->
-			<ol class="carousel-indicators">
-				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-				<li data-target="#myCarousel" data-slide-to="1"></li>
-				<li data-target="#myCarousel" data-slide-to="2"></li>
-			</ol>
-
-			<!-- Wrapper for slides -->
-			<div class="carousel-inner">
-				<div class="item active">
-					<img src="./images/banner2.jpg" style="width:100%;" style="height:20%">
-					<div class="carousel-caption">
-					</div>
-				</div>
-
-				<div class="item">
-					<img src="./images/GW_Paper.png" style="width:100%;" style="height:20%">
-					<div class="carousel-caption">
-					</div>
-				</div>
-				<div class="item">
-					<img src="./images/banner0.jpg" style="width:100%;" style="height:20%">
-					<div class="carousel-caption">
-					</div>
-				</div>
-				<div class="item">
-					<img src="./images/MyND.png" style="width:100%;" style="height:20%">
-					<div class="carousel-caption">
-
-					</div>
-				</div>
-
-			</div>
-
-			<!-- Left and right controls -->
-			<a class="left carousel-control" href="#myCarousel" data-slide="prev">
-				<span class="glyphicon glyphicon-chevron-left"></span>
-				<span class="sr-only">Previous</span>
-			</a>
-			<a class="right carousel-control" href="#myCarousel" data-slide="next">
-				<span class="glyphicon glyphicon-chevron-right"></span>
-				<span class="sr-only">Next</span>
-			</a>
+  
+	<div id="carouselIndicators" class="carousel slide " data-ride="carousel">
+		<ol class="carousel-indicators">
+		  <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+		  <li data-target="#carouselIndicators" data-slide-to="1"></li>
+		  <li data-target="#carouselIndicators" data-slide-to="2"></li>
+		</ol>
+		<div class="carousel-inner">
+		  <div class="carousel-item active">
+			<img class="d-block w-100" src="./images/banner2.jpg" alt="First slide">
+		  </div>
+		  <div class="carousel-item">
+			<img class="d-block w-100" src="./images/GW_Paper.png" alt="Second slide">
+		  </div>
+		  <div class="carousel-item">
+			<img class="d-block w-100" src="./images/banner0.jpg" alt="Third slide">
+		  </div>
+		  <div class="carousel-item">
+			<img class="d-block w-100" src="./images/MyND.png" alt="Third slide">
+		  </div>
 		</div>
-	</div>
+		<a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
+		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+		  <span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
+		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
+		  <span class="sr-only">Next</span>
+		</a>
+	  </div> 
 
 	<!-- One -->
-	<section id="three">
+	<section id="three" class="homepageContent">
 		<div class="inner">
 			<p class="small" align="left" style="font-size: 95%; color: #264d73"><br>
 				We are a member of the <a href="https://icahn.mssm.edu/research/loeb-alzheimers"> Ronald Loeb Center for
@@ -251,11 +231,6 @@
 </body>
 
 </html>
-<!-- Scripts -->
-<script src="./assets/js/jquery.min.js"></script>
-<script src="./assets/js/skel.min.js"></script>
-<script src="./assets/js/util.js"></script>
-<script src="./assets/js/main.js"></script>
 
 </body>
 
