--- a/index.html
+++ b/index.html
@@ -20,11 +20,8 @@
 	<script src="./assets/js/makeTable.js"></script>
 
 
-	<!-- Bootstrap-->
-	<script src="./assets/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
 	<!-- jquery -->
-	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<!-- Datatables -->
 	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
 	<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
@@ -48,6 +45,10 @@
 	 crossorigin="anonymous">
 
 	<!--CSS-->
+
+	<!-- Bootstrap-->
+	<script src="./assets/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
 	<link href="./assets/css/main.css" rel="stylesheet" type="text/css" />
 	<!-- React -->
 	<!-- <script src="https://unpkg.com/react@16/umd/react.production.js" crossorigin></script>
@@ -109,7 +110,7 @@
 			<p class="small" align="left" style="font-size: 95%; color: #264d73"><br>
 				We are a member of the <a href="https://icahn.mssm.edu/research/loeb-alzheimers"> Ronald Loeb Center for
 					Alzheimer’s disease </a>, the Departments of Neuroscience, Genetics and Genomic Sciences, and Neurology at Icahn
-				School of Medicine at Mount Sinai in New York. We are part of the <a href="http://datascience.icahn.mssm.edu/data-science/">
+				School of Medicine at Mount Sinai in New York. We are part of the <a href="https://datascience.icahn.mssm.edu/data-science/">
 					Icahn Institute for Data Science and Genomic Technology </a>, <a href="https://icahn.mssm.edu/research/friedman">
 					the Friedman Brain Institute (FBI) </a>, <a href="https://icahn.mssm.edu/research/immunology"> the Precision
 					Immunology Institute (PrIISM) </a>, and <a href="https://icahn.mssm.edu/research/adrc">the Alzheimer's Disease
