--- a/people.html
+++ b/people.html
@@ -23,7 +23,7 @@
   <script src="./assets/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
   <!-- jquery -->
-  <script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
   <!-- Datatables -->
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
   <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
@@ -49,7 +49,7 @@
   <!--CSS-->
   <link href="./assets/css/main.css" rel="stylesheet" type="text/css" />
   <!-- <style>
-      @import url(http://fonts.googleapis.com/css?family=Abel);
+      @import url(https://fonts.googleapis.com/css?family=Abel);
 
       p { font-family: 'Abel'; }
   </style> -->
