--- a/joinus.html
+++ b/joinus.html
@@ -20,11 +20,8 @@
 	<script src="./assets/js/makeTable.js"></script>
 
 
-	<!-- Bootstrap-->
-	<script src="./assets/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
 	<!-- jquery -->
-	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 	<!-- Datatables -->
 	<link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.19/css/jquery.dataTables.css">
 	<script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/1.10.19/js/jquery.dataTables.js"></script>
@@ -49,6 +46,10 @@
 	 
 
 	<!--CSS-->
+	
+	<!-- Bootstrap-->
+	<script src="./assets/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
 	<link href="./assets/css/main.css" rel="stylesheet" type="text/css" />
 	<!-- React -->
 	<!-- <script src="https://unpkg.com/react@16/umd/react.production.js" crossorigin></script>
