Remove extra libs on homepage

--- a/joinus.html
+++ b/joinus.html
@@ -49,7 +49,7 @@
 	
 	<!-- Bootstrap-->
 	<script src="./assets/js/bootstrap.min.js"></script>
-	<link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
+	<link href="./assets/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="./assets/css/main.css" rel="stylesheet" type="text/css" />
 	<!-- React -->
 	<!-- <script src="https://unpkg.com/react@16/umd/react.production.js" crossorigin></script>
