--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
 		</ol>
 		<div class="carousel-inner">
 		  <div class="carousel-item active">
-			<img class="d-block w-100" src="./images/banner2.jpg" alt="First slide">
+			<img class="d-block w-100" src="./images/banner2.jpg" alt="slide1">
 		  </div>
 		  <div class="carousel-item">
-			<img class="d-block w-100" src="./images/GW_Paper.png" alt="Second slide">
+			<img class="d-block w-100" src="./images/GW_Paper.png" alt="slide2">
 		  </div>
 		  <div class="carousel-item">
-			<img class="d-block w-100" src="./images/banner0.jpg" alt="Third slide">
+			<img class="d-block w-100" src="./images/banner0.jpg" alt="slide3">
 		  </div>
 		  <div class="carousel-item">
-			<img class="d-block w-100" src="./images/MyND.png" alt="Third slide">
+			<img class="d-block w-100" src="./images/MyND.png" alt="slide4">
 		  </div>
 		</div>
 		<a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
