--- a/index.html
+++ b/index.html
@@ -14,20 +14,21 @@
 	<!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
 	<!-- Local Scripts -->
 	<script src="./assets/js/jquery.min.js"></script>
-	<script src="./assets/js/skel.min.js"></script>
+	<!-- <script src="./assets/js/skel.min.js"></script>
 	<script src="./assets/js/util.js"></script>
 	<script src="./assets/js/main.js"></script>
-	<script src="./assets/js/makeTable.js"></script>
- 
+	<script src="./assets/js/makeTable.js"></script> -->
+
 	<!-- Icons -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
 	 crossorigin="anonymous">
 
-	<!--CSS--> 
+	<!--CSS-->
+	<link href="./assets/css/main.css" rel="stylesheet" type="text/css" />
 	<!-- Bootstrap-->
 	<script src="./assets/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
-	<link href="./assets/css/main.css" rel="stylesheet" type="text/css" />
+
 	<!-- React -->
 	<!-- <script src="https://unpkg.com/react@16/umd/react.production.js" crossorigin></script>
 								<script src="https://unpkg.com/react-dom@16/umd/react-dom.production.js" crossorigin></script>
@@ -51,36 +52,37 @@
 		</div>
 	</header>
 
-  
-	<div id="carouselIndicators" class="carousel slide " data-ride="carousel">
+
+	<div id="carouselIndicators" class="carousel slide" data-ride="carousel">
 		<ol class="carousel-indicators">
-		  <li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
-		  <li data-target="#carouselIndicators" data-slide-to="1"></li>
-		  <li data-target="#carouselIndicators" data-slide-to="2"></li>
+			<li data-target="#carouselIndicators" data-slide-to="0" class="active"></li>
+			<li data-target="#carouselIndicators" data-slide-to="1"></li>
+			<li data-target="#carouselIndicators" data-slide-to="2"></li>
+			<li data-target="#carouselIndicators" data-slide-to="3"></li>
 		</ol>
 		<div class="carousel-inner">
-		  <div class="carousel-item active">
-			<img class="d-block w-100" src="./images/banner2.jpg" alt="slide1">
-		  </div>
-		  <div class="carousel-item">
-			<img class="d-block w-100" src="./images/GW_Paper.png" alt="slide2">
-		  </div>
-		  <div class="carousel-item">
-			<img class="d-block w-100" src="./images/banner0.jpg" alt="slide3">
-		  </div>
-		  <div class="carousel-item">
-			<img class="d-block w-100" src="./images/MyND.png" alt="slide4">
-		  </div>
+			<div class="carousel-item active">
+				<img class="d-block w-100" src="./images/banner2.jpg" alt="slide0">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="./images/GW_Paper.png" alt="slide1">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="./images/banner0.jpg" alt="slide2">
+			</div>
+			<div class="carousel-item">
+				<img class="d-block w-100" src="./images/MyND.png" alt="slide3">
+			</div>
 		</div>
 		<a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
-		  <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-		  <span class="sr-only">Previous</span>
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
 		</a>
 		<a class="carousel-control-next" href="#carouselIndicators" role="button" data-slide="next">
-		  <span class="carousel-control-next-icon" aria-hidden="true"></span>
-		  <span class="sr-only">Next</span>
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
 		</a>
-	  </div> 
+	</div>
 
 	<!-- One -->
 	<section id="three" class="homepageContent">
@@ -202,7 +204,7 @@
 					</a>
 				</div>
 
-			</div> 
+			</div>
 	</section>
 
 
