--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 				<img class="d-block w-100" src="./images/banner2.jpg" alt="slide0">
 			</div>
 			<div class="carousel-item">
-				<img class="d-block w-100" src="./images/GW_Paper.png" alt="slide1">
+				<img class="d-block w-100" src="./images/MyND.png" alt="slide1">
 			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100" src="./images/banner0.jpg" alt="slide2">
 			</div>
 			<div class="carousel-item">
-				<img class="d-block w-100" src="./images/MyND.png" alt="slide3">
+				<img class="d-block w-100" src="./images/GW_paper.png" alt="slide3">
 			</div>
 		</div>
 		<a class="carousel-control-prev" href="#carouselIndicators" role="button" data-slide="prev">
