--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
 	<!-- Header -->
 	<header id="header">
-		<div class="container">
+		<div class="inner ">
 			<a class="logo" href="./index.html">
 				<img src="./icons/brain-icon.png" class="img-logo">
 				Raj Lab
