--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 	<!-- Intro -->
 	<section id="three" class="homepageContent">
-		<div  id="Intro container">
+		<div  id="Intro" class="col-md-12 container">
 			<h5>
 				We are a member of the <a href="https://icahn.mssm.edu/research/loeb-alzheimers" target="_blank"> Ronald Loeb Center for
 					Alzheimer’s disease </a>, the Departments of Neuroscience, Genetics and Genomic Sciences, and Neurology at Icahn
@@ -110,7 +110,7 @@
 		</div>
 
 		<!-- Main Content --> 
-		<div class="AboutUs "> 
+		<div class="AboutUs"> 
 				<div class="col-md-12 container"> 
 						<h2>About Us</h2>
 						<h5>The Raj Laboratory is dedicated to understanding the molecular mechanisms of neurodegenerative disorders,
