--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 <head>
 	<title>Raj Lab @ MSSM</title>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+	<!-- <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" /> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 
