--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <body>
 	<!-- Header -->
 	<header id="header">
-		<div class="inner ">
+		<div class="container ">
 			<a class="logo" href="./index.html">
 				<img src="./icons/brain-icon.png" class="img-logo">
 				Raj Lab
