--- a/publications.html
+++ b/publications.html
@@ -156,8 +156,22 @@
 			 width="100%"></table>
 		</div>
 
+	<br><br>
+	
+	<div class="inner">
+		<header>
+			<h1> <i class="far fa-file-powerpoint"></i> Presentations</h1>
+			<p>View, share, or download our presentations from professional conferences, journal clubs, and lab meetings</p>
+		</header>
+		<div id="slideshare"> 
+			<iframe src="//www.slideshare.net/slideshow/embed_code/key/iW42wiLIHwFiuP" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/BrianSchilder/github-presentation-128406831" title="GitHub Presentation" target="_blank">GitHub Presentation</a> </strong> from <strong><a href="//www.slideshare.net/BrianSchilder" target="_blank">BrianSchilder</a></strong> </div>
+			<iframe src="//www.slideshare.net/slideshow/embed_code/key/HyrqheRo0DTvF8" width="595" height="485" frameborder="0" marginwidth="0" marginheight="0" scrolling="no" style="border:1px solid #CCC; border-width:1px; margin-bottom:5px; max-width: 100%;" allowfullscreen> </iframe> <div style="margin-bottom:5px"> <strong> <a href="//www.slideshare.net/BrianSchilder/sundaram-et-al-2018-presentation" title="Sundaram et al. 2018 Presentation" target="_blank">Sundaram et al. 2018 Presentation</a> </strong> from <strong><a href="https://www.slideshare.net/BrianSchilder" target="_blank">BrianSchilder</a></strong> </div>
+		</div>
 
-	</section>
+	</div>
+
+</section>
+
 
 
 
