Remove MyND banner

--- a/data.html
+++ b/data.html
@@ -71,10 +71,10 @@
 						<p>Satesh Ramdhani, Elisa Navarro, Evan Udine, Brian M. Schilder, Madison Parks, Towfique Raj</p></h4>
 				 
 					<a href='https://rajlab.shinyapps.io/Tensor_myeloid/' target='_blank'>
-						<h4>Data: </h4> <p>Shiny App</p>
+						<h4><i class="fas fa-database"></i> Data: </h4> <p>Shiny App</p>
 					</a>
 					<a href='https://www.biorxiv.org/content/early/2018/12/18/499509' target='_blank'>
-						<h4>Paper: </h4><p>BioRxiv</p>
+						<h4><i class="fas fa-scroll"></i> Paper: </h4><p>BioRxiv</p>
 					</a> 
 				</div>  
 			</div>
@@ -89,10 +89,10 @@
 					Ishaan Gupta, Vahram Haroutunian, Eric E. Schadt, Tracy Young-Pearse, Sara Mostafavi, Bin Zhang, Pamela Sklar, David A. Bennett & Philip L. De Jager</p></h4>
 
 				<a href='https://rajlab.shinyapps.io/sQTLviz_ROSMAP/' target='_blank'>
-					<h4>Data: </h4><p>ROS/MAP sQTL browser</p>
+					<h4><i class="fas fa-database"></i> Data: </h4><p>ROS/MAP sQTL browser</p>
 				</a>
 				<a href='https://www.nature.com/articles/s41588-018-0238-1' target='_blank'>
-					<h4>Paper:</h4><p>Nature Genetics</p>
+					<h4><i class="fas fa-scroll"></i> Paper:</h4><p>Nature Genetics</p>
 				</a> 
 			</div>
 		</div>
@@ -106,10 +106,10 @@
 						<p>Yang I Li, Garrett Wong, Jack Humphrey, Towfique Raj</p></h4>
 	
 					<a href='https://rajlab.shinyapps.io/sQTLviz_CMC/' target='_blank'>
-						<h4>Data: </h4><p>ROS/MAP sQTL browser</p>
+						<h4><i class="fas fa-database"></i> Data: </h4><p>ROS/MAP sQTL browser</p>
 					</a>
 					<a href='https://www.biorxiv.org/content/early/2017/12/08/231001' target='_blank'>
-						<h4>Paper:</h4><p>BioRxiv</p>
+						<h4><i class="fas fa-scroll"></i> Paper:</h4><p>BioRxiv</p>
 					</a> 
 				</div>
 			</div>
