--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 				<img class="d-block w-100" src="./images/banner-4.jpg" alt="slide0">
 			</div>
 			<div class="carousel-item">
-				<img class="d-block w-100" src="./images/MyND.png" alt="slide1">
+				<img class="d-block w-100" src="./images/banner2.jpg" alt="slide1">
 			</div>
 			<div class="carousel-item">
 				<img class="d-block w-100" src="./images/banner0.jpg" alt="slide2">
