Fix colors on Funding page

--- a/funding.html
+++ b/funding.html
@@ -30,7 +30,7 @@
 
 <body> 
 	<!-- Navbar -->
-	<nav class="nav navbar navbar-expand-xl navbar-collapse">
+	<nav class="nav navbar navbar-expand-lg navbar-collapse">
 		<a class="navbar-brand" href="./index.html">
 			<img src="./icons/brain-icon.png"  class="d-inline-block align-top" alt="">
 			RAJ LAB
