--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 						1425 Madison Avenue, Icahn 10-70E<br>
 						New York, NY 10029<br>
 						Tel: 212-659-5648<br>
-						E-mail: <a href="mailto:towfique.raj@mssm.edu">towfique.raj@mssm.edu</a>
+						E-mail: <br><email>towfique.raj [at] mssm.edu</email>
 					</p>
 				</div>
 
