--- a/funding.html
+++ b/funding.html
@@ -152,7 +152,7 @@
 					1425 Madison Avenue, Icahn 10-70E<br>
 					New York, NY 10029<br>
 					Tel: 212-659-5648<br>
-					E-mail: <span><a>towfique.raj [at] mssm.edu</a></span>
+					E-mail: <br><email>towfique.raj [at] mssm.edu</email>
 				</p>
 			</div>
 
