--- a/people.html
+++ b/people.html
@@ -9,16 +9,7 @@
   <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
 
   <!-- D3 -->
-  <script src="https://d3js.org/d3.v5.min.js"></script>
-  <!-- <script src="https://d3js.org/d3.v4.min.js"></script> -->
-  <!-- Local Scripts -->
-  <script src="./assets/js/jquery.min.js"></script>
-  <script src="./assets/js/skel.min.js"></script>
-  <script src="./assets/js/util.js"></script>
-  <script src="./assets/js/main.js"></script>
-  <script src="./assets/js/makeTable.js"></script>
-
-
+  <script src="https://d3js.org/d3.v5.min.js"></script> 
   
   <!-- jquery -->
   <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script> 
@@ -40,17 +31,7 @@
   <!-- Bootstrap-->
   <script src="./assets/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
-  <!-- <style>
-      @import url(https://fonts.googleapis.com/css?family=Abel);
-
-      p { font-family: 'Abel'; }
-  </style> -->
-
-
-  <!-- React -->
-  <!-- <script src="https://unpkg.com/react@16/umd/react.production.js" crossorigin></script>
-                  <script src="https://unpkg.com/react-dom@16/umd/react-dom.production.js" crossorigin></script>
-                  <script src="./assets/jsx/react.jsx"></script>  -->
+   
 </head>
 
 
@@ -331,7 +312,7 @@
           1425 Madison Avenue, Icahn 10-70E<br>
           New York, NY 10029<br>
           Tel: 212-659-5648<br>
-          E-mail: <span><a>towfique.raj [at] mssm.edu</a></span>
+          E-mail: <br><email>towfique.raj [at] mssm.edu</email>
         </p>
       </div>
 
