--- a/index.html
+++ b/index.html
@@ -202,7 +202,14 @@
 
 		<!-- Activities -->
 		<div class="inner" class="Activities">
-			<h3>Lab Activities!</h3>
+			<h3>Lab Activities!</h3> 
+			<div class="row container">
+				<p>Jump to:</p>
+				<a href="#gallery3">Holiday Party Painting</a>
+				<a href="#gallery2">Friedman Brain Institute Holiday Party</a>
+				<a href="#gallery1">Science-ing</a>
+			</div>
+		 
 			<div class="row container"> 
 				<div class="column activities"> 
 					
