Add links to Datatable; Make title larger; Combine fields into Issue

--- a/publications.html
+++ b/publications.html
@@ -82,7 +82,7 @@
 		<div class="inner" id="Publications"> 
 			<header> 
 				<h1><i class="fas fa-book-open"></i> Publications</h1>
-				<p>Dynamically search and download all of our publications 
+				<p>Dynamically search and download a list of all of our publications 
 					via the <a id="tabLink"> Datatable View </a>
 					<br><br>
 					Jump to <a href="#Presentations">Presentations</a> 
