--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
 					<h3>News and Events</h3>
 					<div class="scroll"> 
 						<ul>
+							<li><b>02 . 04 . 2019</b>
+								<p>Postdoc Elisa was awarded the 2019 ADRC Pilot Grant! Congratulations Elisa!</p>
+								<hr>
+								<p>Madison was accepted to (another!) medical school, Penn State.</p>
+							</li>
 							<li><b>12 . 05 . 2018</b>
 								<p> Research associate Madison was accepted to medical school!</p>
 							</li>
