Updated Team page

--- a/funding.html
+++ b/funding.html
@@ -71,7 +71,7 @@
 		<div class="inner">
 			<header>
 				<h1><i class="fa fa-university" aria-hidden="true"></i>
-					</i> Funding</h1>
+					 Funding</h1>
 				<p>Our research is made possible by the generous funding provided by the following sources.
 					<br>Both <a href="#activeGrants">Active</a> and <a href="#completedGrants">Completed</a> grants are provided.
 					Download all here: <a href="./documents/Raj_Grants.csv" download="Raj_Grants.csv">
