--- a/people.html
+++ b/people.html
@@ -386,10 +386,7 @@
                                             <h4 class="card-title">Brian Schilder, M.Phil.</h4>
                                             <p class="card-text">
                                                 Brian earned his Sc.B. from Brown University in Cognitive Neuroscience
-                                                (2011). Afterwards, he simultaneously held two jobs conducting research on
-                                                 evolutionary/developmental social cognition (Subiaul Lab)
-                                                 and evolutionary neuroscience (Sherwood Lab).
-                                                 He earned his M.Phil. at GWU in Human Paleobiology (2017), 
+                                                (2011). He earned his M.Phil. at The George Washington University in Human Paleobiology (2017), 
                                                  researching the ecological, neuroanatomical, transcriptomic, and genomic 
                                                  evolution of the hippocampus and episodic memory.
                                                 <br>
